# ECG-Annotation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  responses.db  ruff.toml  setup.py
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml
data/: batch_10.xml  batch_9.xml
ecg_annot/: launch.py
ecg_annot/configs/: annotation.py
ecg_annot/data_utils/: prepare_np.py  prepare_xml.py
tests/: test_xml.py
