[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg_annot"
version = "0.0.0"
description = "Open source code of ECG-Annotation"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.51.0",
    "st-gsheets-connection",
]

[tool.ruff.lint]
select = ["ALL"]